# automate_binance

./: CMakeLists.txt  main.c
websocket_parser/: CMakeLists.txt  configuration.config  configuration.hpp
websocket_parser/core/: CMakeLists.txt
